git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1015 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_subscription_options.html.haml
+++ b/app/views/management/_subscription_options.html.haml
@@ -1,12 +1,13 @@
 -if @subscription_nature.nature == "quantity"
-  %table.formalize
-    %tr.field 
+  %table
+    %tr
       %td.label=tc('select_number')
-      %td.input=text_field(:subscription, :value, :size=>6, :value=>session[:subscription_instant]||@subscription_nature.actual_number)
-  %p=link_to tc(:subscription_natures_up)+" : "+@subscription_nature.actual_number.to_s, {  :action=>:subscription_natures_up, :id=>@subscription_nature.id} , {:method=>:post}
-  %p=link_to tc(:subscription_natures_down)+" : "+@subscription_nature.actual_number.to_s, {:action=>:subscription_natures_down, :id=>@subscription_nature.id}, {:method=>:post}
+      %td=text_field(:subscription, :value, :size=>6, :value=>session[:subscription_instant]||@subscription_nature.actual_number)
+      %td
+        =link_to image_tag("buttons/plus.png"),  {:action=>:subscription_natures_up,   :id=>@subscription_nature.id} , {:method=>:post, :class=>:act}
+        =link_to image_tag("buttons/minus.png"), {:action=>:subscription_natures_down, :id=>@subscription_nature.id}, {:method=>:post, :class=>:act}
 -elsif @subscription_nature.nature == "period"
-  %table.formalize
-    %tr.field
+  %table
+    %tr
       %td.label=tc('select_date')
       %td.input=text_field(:subscription, :value, :size=>10, :value=>session[:subscription_instant]||Date.today)
