--- a/app/views/management/subscriptions.html.haml
+++ b/app/views/management/subscriptions.html.haml
@@ -1,18 +1,13 @@
-.toolbar
+.search 
   - form_tag do
-    %table.formalize
-      %td.label=tc('subscription_nature')
-      %td.input=select(:subscription_nature, :id, @current_company.subscription_natures.collect{|x| [x.name, x.id]})
-    
+    %table
+      %tr
+        %td.label=tc('subscription_nature')
+        %td.input=select(:subscription_nature, :id, @current_company.subscription_natures.collect{|x| [x.name, x.id]})
+        %td#subscription_options=render :partial=>"subscription_options"
+        %td=submit_tag tg('search_go')
 
-    #subscription_options
-      =render :partial=>"subscription_options"
-
-    .actions
-      =submit_tag tg('apply')
-
-= dyta :subscriptions
-
+=dyta :subscriptions
 
 =observe_field("subscription_nature_id",  :url=>{:action => :subscription_options_display}, :frequency => 0.25, :with=>"subscription_nature_id")
 
