--- a/public/stylesheets/dyta.css
+++ b/public/stylesheets/dyta.css
@@ -1,6 +1,6 @@
 h3.dyta {padding:4px;color: #139; font-size: 16px; }
 table.dyta { border-collapse: collapse; width: 100%; border-bottom: 1px solid #BACFE6;}
-table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:2px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }
+table.dyta th { background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; padding:1px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left; }
 table.dyta th.sorted { background: #C9D3E2 url(../images/template/table_head_sorted.png) repeat-x bottom; padding:2px 3px; color: #336; font-weight: bold; font-size:13px; text-align:left;}
 table.dyta th a.sort { display:block; margin-right:18px; text-decoration:none; padding: 1px; color: #336; }
 table.dyta th a.sort:active { padding:2px 0 0 2px;}
@@ -23,13 +23,17 @@ table.dyta tr.child td:first-child { padding-left:20px; }
 table.dyta td.empty { text-align:center; color: #777; padding:4px; background: #EEF; }
 table.dyta th, table.dyta td.empty, table.dyta td.procedures { border-top: 1px solid #BACFE6; }
 table.dyta th, table.dyta td { border-left: 1px solid #BACFE6; border-right: 1px solid #BACFE6; }
-table.dyta tr      td.paginate { text-align:center; border-top:1px solid #BACFE6; padding: 2px; background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }
-table.dyta tr      td.paginate div.pagination { padding: 2px; }
-table.dyta tr      td.paginate div.pagination * { padding:2px 4px; }
-table.dyta tr      td.paginate div.pagination span.current { font-weight:bold; color: black; }
-table.dyta tr      td.paginate div.pagination span.disabled { color: #88A; }
-table.dyta tr      td.paginate div.pagination a.prev_page { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2.png) no-repeat left;}
-table.dyta tr      td.paginate div.pagination a.next_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
+table.dyta tr      td.bottom { clear:both; border-top:1px solid #BACFE6; padding: 0px 3px; background: #e9f3fe url(../images/template/table_head.png) repeat-x bottom; }
+table.dyta tr      td.bottom div.export { padding: 2px; float:left;}
+table.dyta tr      td.bottom div.export a { padding: 0 0 0 14px; background: url(../images/buttons/export.png) left center no-repeat;}
+table.dyta tr      td.bottom div.pagination { padding: 2px; float:right;}
+table.dyta tr      td.bottom div.pagination * { padding:2px 4px; }
+table.dyta tr      td.bottom div.pagination span.current { font-weight:bold; color: black; }
+table.dyta tr      td.bottom div.pagination span.disabled { color: #88A; }
+table.dyta tr      td.bottom div.pagination .prev_page { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2.png) no-repeat left;}
+table.dyta tr      td.bottom div.pagination .prev_page.disabled { padding:2px 4px 2px 10px; background: url(../images/buttons/previous2-dis.png) no-repeat left;}
+table.dyta tr      td.bottom div.pagination .next_page { padding:2px 10px 2px 4px; background: url(../images/buttons/next2.png) no-repeat right;}
+table.dyta tr      td.bottom div.pagination .next_page.disabled { padding:2px 10px 2px 4px; background: url(../images/buttons/next2-dis.png) no-repeat right;}
 table.dyta tr      td.decimal { text-align: right; }
 table.dyta tr      td.float   { text-align: right; }
 table.dyta tr      td.integer { text-align: right; }
