--- a/app/views/management/_sale_order_lines_form.html.haml
+++ b/app/views/management/_sale_order_lines_form.html.haml
@@ -2,7 +2,8 @@
   - f.error :sale_order_line
   - f.error :subscription
   - f.title :infos
-  - f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
+  -# f.field :sale_order_line, :price_id, :choices=>:price, :new=>{:action=>:prices_create, :mode=>:sales}
+  -f.field :sale_order_line, :price_id, :choices=>Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]}, :new=>{:action=>:prices_create, :mode=>:sales}
   - f.field :sale_order_line, :location_id, :choices=>@stock_locations.collect{|x| [x.name, x.id]} if @stock_locations.size > 1
   - f.field :sale_order_line, :quantity
 
@@ -10,12 +11,14 @@
   =formalize do |f|
     - f.field :subscription, :first_number
     - f.field :subscription, :last_number
+    -#f.field :subscription, :contact_id, :choices=>:contact
     - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
 
 #subscription_date{:style=>'display:none'}
   =formalize do |f|
     - f.field :subscription, :started_on
     - f.field :subscription, :finished_on
+    -# f.field :subscription, :contact_id, :choices=>:contact
     - f.field :subscription, :contact_id, :choices=>@current_company.contacts.find_all_by_active(true).collect{|x| [x.entity.full_name+" "+x.address, x.id]}
  
 -if @current_user.free_price
