git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1018 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_event_natures_form.html.haml
+++ b/app/views/relations/_event_natures_form.html.haml
@@ -1,4 +1,5 @@
 = formalize do |f|
   - f.error :event_nature
   - f.field :event_nature, :name
+  - f.field :event_nature, :usage, :choices=>EventNature.usages
   - f.field :event_nature, :duration
