git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1023 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_sale_order_natures_form.html.haml
+++ b/app/views/management/_sale_order_natures_form.html.haml
@@ -4,6 +4,7 @@
   - f.field :sale_order_nature, :active
   - f.field :sale_order_nature, :comment, :field=>:textarea
   - f.title :conditions
+  - f.field :sale_order_nature, :payment_type, :choices=>SaleOrderNature.payment_types
   - f.field :sale_order_nature, :expiration_id, :choices=>@current_company.delays.collect{|x| [x.name, x.id]}
   - f.field :sale_order_nature, :payment_delay_id, :choices=>@current_company.delays.collect{|x| [x.name, x.id]}
   - f.field :sale_order_nature, :downpayment
