--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -20,6 +20,7 @@
       - f.field t('activerecord.attributes.sale_order.invoice_contact_id'), @sale_order.invoice_contact.address
     - f.field :sale_order, :comment, :field=>:textarea
     - f.field :sale_order, :letter_format
+  =formalize(:id=>:letter_format) do |f|
     - f.title :letter
     - f.field :sale_order, :subject
     - f.field :sale_order, :function_title
@@ -28,4 +29,17 @@
   .actions
     =submit_tag tg :next
 =javascript_tag("function update_contacts(value) {new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {$('sale_order_contact_id').update(resp.responseText); $('sale_order_delivery_contact_id').update(resp.responseText); $('sale_order_invoice_contact_id').update(resp.responseText);  }  }); }; /*update_contacts($('sale_order_client_id').value); */")
+
+:javascript
+  function letter_informations(){
+    if($('sale_order_letter_format').checked)
+      $('letter_format').show();
+    else
+      $('letter_format').hide();
+  }
+  letter_informations();
+
+
 =observe_field "sale_order_client_id", :url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
+
+=observe_field("sale_order_letter_format", :frequency=>0.25, :function=> "letter_informations();")
