git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1028 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_areas_form.html.haml
+++ b/app/views/relations/_areas_form.html.haml
@@ -1,6 +1,6 @@
 =formalize do |f|
   - f.error :area
-  - f.field :area, :district_id, :choices => @current_company.districts.find(:all, :order=>:name).collect {|d| [d.name, d.id]}, :options=>{:include_blank=>true}, :new => {:action => :districts_create}
+  - f.field :area, :district_id, :choices => :districts, :new => {:action => :districts_create}
   - f.field :area, :name
   - f.field :area, :code
   - f.field :area, :country, :choices=>countries, :options=>{:include_blank=>true}
