--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -288,3 +288,6 @@ fieldset.itemize { border: 1px solid #777; -moz-border-radius: 8px; float: left;
 fieldset.itemize legend { color: blue; margin: 0 8px; padding:2px;}
 
 .invoice { text-align:center;  padding:20px; font-size:15px; width: 200px;  background: #FDC; border:1px solid red; margin: 20px auto; }
+
+
+input.dyli { background: url(../images/buttons/previous2.png) right center no-repeat; }
