--- a/app/views/management/embankments_display.html.haml
+++ b/app/views/management/embankments_display.html.haml
@@ -13,7 +13,7 @@
   %table.dyta
     %tr
       %th=tc(:check_number)
-      %td=@embankment.payments_number
+      %td=@embankment.payments_count 
     %tr.important
       %th=tc(:amount)
       %td=@embankment.amount.to_s+" "+@embankment.bank_account.currency.code
