--- a/app/views/management/sales_general.html.haml
+++ b/app/views/management/sales_general.html.haml
@@ -4,7 +4,8 @@
     - f.error 'sale_order'
     - f.title :client
     - if @sale_order.new_record?
-      - f.field :sale_order, :client_id, :choices=>@current_company.available_entities(:conditions=>{:client=>true}, :order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}
+      -# f.field :sale_order, :client_id, :choices=>@current_company.available_entities(:conditions=>{:client=>true}, :order=>:name).collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:relations, :action=>:entities_create}
+      - f.field :sale_order, :client_id, :choices=>:clients, :new=>{:controller=>:relations, :action=>:entities_create}
       - f.title :conditions
       - f.field :sale_order, :nature_id, :choices=>@current_company.sale_order_natures.collect{|x| [x.name, x.id]}
       - f.field :sale_order, :responsible_id, :choices=>@current_company.employees.collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:resources, :action=>:employees_create}
@@ -28,7 +29,15 @@
     - f.field :sale_order, :conclusion, :field=>:textarea
   .actions
     =submit_tag tg :next
-=javascript_tag("function update_contacts(value) {new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {$('sale_order_contact_id').update(resp.responseText); $('sale_order_delivery_contact_id').update(resp.responseText); $('sale_order_invoice_contact_id').update(resp.responseText);  }  }); }; /*update_contacts($('sale_order_client_id').value); */")
+:javascript
+  function update_contacts(value) {
+    new Ajax.Request('#{url_for(:controller=>:management, :action => :sales_contacts)}', {asynchronous:true, evalScripts:true, parameters:'client_id=' + encodeURIComponent(value), onSuccess: function(resp) {
+      $('sale_order_contact_id').update(resp.responseText);
+      $('sale_order_delivery_contact_id').update(resp.responseText); 
+      $('sale_order_invoice_contact_id').update(resp.responseText);  
+     }});
+  } 
+  /*update_contacts($('sale_order_client_id').value); */
 
 :javascript
   function letter_informations(){
@@ -40,6 +49,6 @@
   letter_informations();
 
 
-=observe_field "sale_order_client_id", :url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
+=observe_field "sale_order[client_id]", :url=>{:action => :sales_contacts}, :frequency => 0.25, :function=>"update_contacts(value)"
 
 =observe_field("sale_order_letter_format", :frequency=>0.25, :function=> "letter_informations();")
