--- a/public/stylesheets/application.css
+++ b/public/stylesheets/application.css
@@ -291,3 +291,14 @@ fieldset.itemize legend { color: blue; margin: 0 8px; padding:2px;}
 
 
 input.dyli { background: url(../images/buttons/previous2.png) right center no-repeat; }
+
+/*
+.tabbox > .tabs  { clear: both; height: 20px;}
+.tabbox > .tabs > .tab { float: left; background: white; padding: 4px; margin: 0 4px 0 0;}
+*/
+.tabbox > .tabs  { padding: 4px 0 0px; }
+.tabbox > .tabs > .tab { line-height: 24px; background: #DEF; padding: 4px 6px 3px; margin: 0 4px 0 0; border: 1px solid #AAA; border-bottom: none;}
+.tabbox > .tabs > .tab.current { color: #000; padding: 4px 6px; text-decoration: none; background: #F0F7FF; font-weight: bold;}
+.tabbox > .tabpanels {background: url(../images/template/columns.png) repeat-x scroll center top; border: 1px solid #95b0e4; padding:8px; }
+.tabbox > .tabpanels > .tabpanel { display: none; }
+.tabbox > .tabpanels > .tabpanel.current { display: block; }
