git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1046 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/company/user_statistics.html.haml
+++ b/app/views/company/user_statistics.html.haml
@@ -2,11 +2,11 @@
   - form_tag do
     %table
       %tr
-        %td.label=tc("start")
+        %td.label=tc(:start)
         %td=text_field_tag(:start, session[:statistics_start], :size=>8)
-        %td.label=tc("end")
+        %td.label=tc(:end)
         %td=text_field_tag(:end, session[:statistics_end], :size=>8)
-        %td=submit_tag tg("search_go")
+        %td=submit_tag tg(:search_go)
 %p=tc(:nb_sales, :count=>@sale_orders_count)
 -if @sale_orders_count > 0
   %p=tc(:total_amount)+@sale_orders_amount.to_s
@@ -17,4 +17,4 @@
   =tc(:during)+event_nature['esum'].to_i.to_s+tc(:minutes)
   %br  
 
-
+ 
