--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -32,6 +32,8 @@
 
 =tabbox do |tb|
   -tb.tab(tc(:subscriptions, :count=>@entity.subscriptions.count)) do |c|
+    -c << toolbar do
+      -link(:subscriptions_create, :controller=>:management, :entity_id=>@entity.id)
     -c << dyta(:entity_subscriptions)
   -tb.tab(tc(:contacts, :count=>@contacts_count)) do |c|
     -c << toolbar do
