--- a/app/views/company/user_statistics.html.haml
+++ b/app/views/company/user_statistics.html.haml
@@ -7,14 +7,14 @@
         %td.label=tc(:end)
         %td=text_field_tag(:end, session[:statistics_end], :size=>8)
         %td=submit_tag tg(:search_go)
-%p=tc(:nb_sales, :count=>@sale_orders_count)
--if @sale_orders_count > 0
-  %p=tc(:total_amount)+@sale_orders_amount.to_s
-  %p=tc(:total_invoiced_amount)+@invoiced_amount.to_s
-
--for event_nature in @event_natures
-  =tc(:nb_events, :count=>event_nature['ecount'].to_i)+event_nature.name
-  =tc(:during)+event_nature['esum'].to_i.to_s+tc(:minutes)
-  %br  
-
- 
+-if @current_user.employee
+  .menu
+    %ul
+      %li=tc(:nb_sales, :count=>@sale_orders_count)
+      -if @sale_orders_count > 0
+        %li=tc(:total_amount)+@sale_orders_amount.to_s
+        %li=tc(:total_invoiced_amount)+@invoiced_amount.to_s
+      -for event_nature in @event_natures
+        %li=h tc(:events, :count=>event_nature['ecount'].to_i, :nature=>event_nature.name, :duration=>event_nature['esum'].to_i)
+-else
+  %strong=tc(:no_employee)
