git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1052 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/_quick_line.html.haml
+++ b/app/views/management/_quick_line.html.haml
@@ -2,7 +2,7 @@
   =tc('quick_add')
 .center-line
   -form_tag(:action=>:sale_order_lines_create) do 
-    =tc('product')+" ", select(:sale_order_line, :price_id, Price.find(:all,:conditions=>{:company_id=>@current_company.id,:entity_id=>@current_company.entity_id, :active=>true, :category_id=>@sale_order.client.category.id}).collect{|x| [x.product.name+" "+x.amount.to_s+" "+x.currency.code, x.id]})
+    =tc('product')+" "+select(:sale_order_line, :price_id, @current_company.available_prices.collect{|x| [x.label, x.id]})
     = "  "+tc('quantity'), text_field(:sale_order_line, :quantity, :size=>10, :value=>1.0)
     =" "+tc('location'), select(:sale_order_line, :location_id, @current_company.stock_locations.collect{|x| [x.name, x.id]}) if @current_company.stock_locations.size > 1
     #price_amount{:style=>'display:none'}
