git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1054 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -1,6 +1,6 @@
 .count=tc('nb_entities', :count=>@current_company.entities.size)
 
-=render :partial=>'entities_search'
+=render :partial=>"shared/entities_search"
 
 =toolbar do
   -link :entities_create
