--- a/app/views/shared/_entities_search.html.haml
+++ b/app/views/shared/_entities_search.html.haml
@@ -1,5 +1,5 @@
 .search
-  - form_tag(:action=>:entities) do
+  - form_tag(:controller=>:relations, :action=>:entities) do
     %table
       %tr
         %td.label=tc("search")
