git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1057 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/management/embankment_checks_create.html.haml
+++ b/app/views/management/embankment_checks_create.html.haml
@@ -13,7 +13,7 @@
           %td=@check.amount
           %td=@check.to_bank_on
           %td=@check.entity.full_name
-          -if !@check.embanker_id.nil?
+          -if !@check.embanker.nil?
             %td=@check.embanker.first_name+" "+@check.embanker.last_name
           -else
             %td
