--- a/app/views/relations/_mandates_form.html.haml
+++ b/app/views/relations/_mandates_form.html.haml
@@ -1,6 +1,6 @@
 =formalize do |f|
   -f.error :mandate
-  -f.field :mandate, :entity_id, :choices=>:entity
+  -f.field :mandate, :entity_id, :choices=>:entities
   -#f.field :mandate, :entity_id, :choices=>@entities.collect{|e| [e.full_name,e.id]}
   -f.field  t("activerecord.attributes.mandate.family"), text_field_with_auto_complete(:mandate, :family)
   -f.field  t("activerecord.attributes.mandate.organization"), text_field_with_auto_complete(:mandate, :organization)
