--- a/app/views/relations/_events_form.html.haml
+++ b/app/views/relations/_events_form.html.haml
@@ -1,6 +1,7 @@
 = formalize do |f|
   - f.error :event
-  - f.field :event, :entity_id, :choices=>@current_company.entities.find(:all, :conditions=>{:client=>true}, :order=>"name ASC").collect{|x| [x.full_name, x.id]}
+  -# f.field :event, :entity_id, :choices=>@current_company.entities.find(:all, :conditions=>{:client=>true}, :order=>"name ASC").collect{|x| [x.full_name, x.id]}
+  - f.field :event, :entity_id, :choices=>:entities
   - f.field :event, :employee_id, :choices=>@current_company.employees.collect{|x| [x.full_name, x.id]}, :new=>{:controller=>:resources, :action=>:employees_create}
   - f.field :event, :nature_id, :choices=>@current_company.event_natures.collect{|x| [x.name, x.id]}, :new=>{:action=>:event_natures_create}
   - f.field :event, :duration
