git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1061 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities.html.haml
+++ b/app/views/relations/entities.html.haml
@@ -1,12 +1,10 @@
-.count=tc('nb_entities', :count=>@current_company.entities.size)
-
 =render :partial=>"shared/entities_search"
 
 =toolbar do
   -link :entities_create
   -link :entities_merge
-  -link :entities_export
-  -link :entities_import
+  -#link :entities_export
+  -#link :entities_import
 
 =dyta :entities
    
