--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -8,7 +8,7 @@
     = stylesheet_link_tag 'application', 'dyta'
     = stylesheet_link_tag 'print', :media=>'print'
     = javascript_include_tag :defaults
-  %body{:id=>:body, :orient=>:vertical, :onload=>'initTab(); resize();', :onresize=>'resize();'}
+  %body{:id=>:body, :orient=>:vertical, :onload=>"resize();", :onresize=>'resize();'}
     = top_tag
     #columns{:orient=>:horizontal, :flex=>1}
       -side=side_tag
