--- a/app/views/management/_subscriptions_form.html.haml
+++ b/app/views/management/_subscriptions_form.html.haml
@@ -1,7 +1,7 @@
 =formalize do |f|
   -f.error 'subscription'
   -f.field :subscription, :entity_id, :choices=>:entities
-  -f.field :subscription, :contact_id, :choices=>:contacts
+  -f.field :subscription, :contact_id, :choices=>:subscription_contacts
   -#f.field :subscription, :invoice_id
   -#f.field :subscription, :sale_order_id
   -f.field :subscription, :nature_id, :choices=>@current_company.subscription_natures.collect{|x| [x.name, x.id]}, :options=>{:include_blank=>true}
