git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1068 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/entities_display.html.haml
+++ b/app/views/relations/entities_display.html.haml
@@ -1,3 +1,4 @@
+=render :partial=>"shared/entities_search"
 = toolbar do
   - link :entities_update, :id=>@entity.id
   - link :entities_print, :id=>@entity.id
