git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1071 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_form.html.haml
+++ b/app/views/relations/_entities_form.html.haml
@@ -18,6 +18,7 @@
   -#f.field :entity, :dead_on
   -f.field :entity, :website
   -f.field :entity, :comment, :field=>:textarea
+  -f.field :entity, :ean13
   -for datum in @complement_data
     -f.field datum.complement.name, {:datatype=>datum.complement.nature.to_sym, :id=>"complement_datum_#{datum.complement_id}_value", :name=>"complement_datum[#{datum.complement_id}][value]", :value=>datum.value, :size=>datum.complement.length_max, :options=>{:include_blank=>(datum.complement.required ? nil : '')}, :choices=>datum.complement.choices.find(:all, :conditions=>{:company_id=>@current_company.id}, :order=>:position).collect{|x| [x.name , x.id]}  }
 
