git-svn-id: https://www.ekylibre.org/svn/trunk/ekylibre@1073 67a09383-3dfa-4221-8551-890bac9c277c

--- a/app/views/relations/_entities_contacts_form.html.haml
+++ b/app/views/relations/_entities_contacts_form.html.haml
@@ -1,4 +1,6 @@
-=#render :partial=>"general_description_form"
+=formalize do |f|
+  -f.title :general
+  -f.field :contact, :default
 =render :partial=>"coordinates_form", :locals => {:company => @current_company}
  
 
